tests/paczka1/fuzzy1/71700523.err
Error in line 2: zrfdA S360 18,9
Error in line 3: zrfdA A432 15,7
Error in line 12: h2UH A340 74,4
Error in line 7: P9ZS4j A812 41,0
Error in line 20: S360 A432 59,5
Error in line 23: S360 A812 64,7
